# vcf2rdf

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  NOTICE  README.md
.github/workflows/: dockerhub.yml  release.yml
docker/alpine/: Dockerfile
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  rdf.rs  util.rs  vcf.rs
src/cli/: compressor.rs  configuration.rs  converter.rs  generator.rs  statistics.rs
src/rdf/: namespace.rs  turtle_writer.rs  writer.rs
src/util/: path.rs  vcf.rs
src/util/vcf/: compress.rs  tabix.rs
src/vcf/: alteration.rs  assembly.rs  compress.rs  info.rs  reader.rs  record.rs  tabix.rs
src/vcf/record/: as_turtle.rs
test/: dbsnp_example.vcf  dbsnp_example.vcf.gz.tbi  dbsnp_example_wo_info_metadata.vcf  dbsnp_example_wo_info_metadata.vcf.gz.tbi  vcf_spec.vcf.gz.tbi  visc_spec.vcf  visc_spec.vcf.gz.tbi
