[package]
name = "vcf2rdf"
version = "1.0.0-beta.2"
authors = ["Daisuke Satoh <daisuke.satoh@lifematics.co.jp>"]
edition = "2018"
description = "Convert Variant Call Format (VCF) to Resource Description Framework (RDF) Format."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
bgzip = "0.1"
flate2 = "1.0"
libc = "0.2"
once_cell = "1.7"
rust-htslib = { version = "0.36", default-features = false }
serde = { version ="1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
strum = { version = "0.20", features = ["derive"] }
thiserror = "1.0"
